# ur_hybrid_force_motion_controller

./: AGENTS.md  CMakeLists.txt  README.md  agents.md  package.xml  phase_one_test.md  phase_two_test.md  plan.md
config/: controller.yaml  hybrid_force_motion_hardware.rviz  hybrid_force_motion_sim.rviz
launch/: hybrid_force_motion_hardware.launch.py  hybrid_force_motion_sim.launch.py  teleport_bringup.launch.py
meshes/: dome.stl
msg/: HybridForceMotionState.msg
reference/: 16_HybridControl.txt  fine me github repository which imelmtn like this.md  friction_normal_estimator.md  hybrid_force_motion_guide.md  hybrid_force_motion_v2.md  yifan-hou-force_control.txt  yifan-hou-pub-icra19-hybrid-control.txt
scripts/: dome_teleporter.py  ee_teleporter.py  rerun_viz.py
src/: ajay.md  cartesian_velocity_controller_node.cpp  force_control_analysis.md  hybrid_force_motion_node.cpp  math.md
srv/: TeleportTool.srv
worlds/: contact_dome.sdf
